# dot

./: .bash_profile  .bashrc  .emacs  .profile  .spacemacs  commit_doom.sh  get_downloaded_transformer_names.py  guix_install.sh  local_doom_to_repo.sh  make_minimal_setup.py  repo_doom_to_local.sh  update_doom_config.sh  update_dotfiles.py
.config/i3/: config  config.dm
.doom.d/: config.el  custom.el  flycheck_config.el  init.el  packages.el  paths.el
.doom.d/egents/: agent_setup.py  egents.el
.doom.d/util/: ai.el  blocks.el  browsin.el  exercism.el  ob-mermaid.el  org-roam-weeklies.el  org.el  python.el  roam.el
.doom.d/util/assistant-agent/: assistant-agent.el
dot.doom.d/: config.el  custom.el  init.el  packages.el
dot.doom.d/util/: blocks.el  docker.el  org.el
emacs/: init.el
guix/: channels.scm  manifest.scm
nix/elixir/: flake.nix
python_venvs/: README.org
python_venvs/langchain/: pyproject.toml
scripts/: make_settings_ini.py  run_pluto.jl
templates/: settings.ini  setup.py
