[tool.poetry]
name = "langchain-env"
version = "0.1.0"
description = ""
authors = ["Jakub Bartczuk <bartczukkuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.349"
openai = "^1.3.8"
youtube-search = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
